--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <section id="banner" >
         <h1 id="h1">Bienvenido a A.D.I.S.E.<b class="p-estrella">&#9734;</b>Records</h1>
         <p id="p-banner">Descubre la mejor música</p>
-        <img src="adiselogo.png" class="img-logo--banner"> 
+        <img src="adiselogo.png" class="img-logo--banner">   
     </section>
     
     <section id="presentacion">
@@ -81,18 +81,20 @@
     <section id="section-pm">
         <h2 id="h2-pm">Producción Musical</h2>
         <div class="div-pm">
+            <img src="aurisfondojpg.jpg" alt="" id="foto-pm">
             <h3 id="h3-pm">¿Producción Musical?</h3>
             <p id="p-pm">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
-            <img src="aurisfondojpg.jpg" alt="" id="foto-pm">
-        </div>  
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodoLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+        </div>   ¨
         <div class="div-pm-2">
-            <img src="midigrande.jpg" alt="" id="foto-2-pm">
-            <h3 id="h3-pm-2">¿Producción Musical?</h3>
-            <p id="p-pm-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p>
+                <p id="p-pm-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodoLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
         </div>
     </section>
 
@@ -101,7 +103,7 @@
         <div>
         <div id="div-pa">
             <h3 id="h3-pa"></h3>
-            <img>
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Funiversoabierto.org%2F2018%2F11%2F09%2Ffotografia-digital-catalogacion-y-metadatos-para-la-biblioteca-digital%2F&psig=AOvVaw14JMkEnBP3ERlDpMIVlHzy&ust=1686427496757000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCOCP7pH-tv8CFQAAAAAdAAAAABAE">
             <p id="p-pa">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos voluptatum animi, ipsa excepturi pariatur culpa illo amet architecto dolore saepe unde ipsam est autem aliquid! Perspiciatis in ipsum voluptates cum.
             </p>
