--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
                 <img src="bata.jpg">
             </li>
             <li>
-                <img src="sala-en.jpg">
+                <img src="amplinegro.jpg">
             </li>
             <li>
                 <img src="orange.jpg">
             </li>
             <li>
-                <img src="">
+                <img src="bajo.jpg">
             </li>
         </ul>
     </div>
