--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@ Para entender mejor el papel del productor musical, te comparto las etapas que c
             <li><img src="marufedeleperfil.jpg">Maru Fedele</li>
                 <a href="https://youtube.com/playlist?list=OLAK5uy_k0KF0h_Cl2Yn4KTXAPlm1mfuTDUkfEsEM" target="_blank">Amarás</a>
                 <a href="https://youtube.com/playlist?list=OLAK5uy_kf-miSh74ZT3n-xZosQE0ldI3Cnd4t_64" target="_blank">Cuenta</a>  
-            <li><img src="nuncasera.jpg">Nunca Será</li>
+            <li><img src="nuncasera.jpg">Nunca Serán</li>
                 <a href="https://youtu.be/U6MXxvUap0o" target="_blank">Sin Retorno</a>
             <li><img src="p2.jpg">P2</li>
                 <a href="https://youtube.com/playlist?list=PLWhMLcSqvsp1OS9VDTGaz1t3l81XJ62BD" target="_blank">PlayList</a>
-            <li><img src="torp2perfil.jpg">TorP2</li> 
+            <li><img src="torp2perfil.jpg">Torpedos</li> 
                 <a href="https://youtube.com/playlist?list=PLceQ-SyHl6rHFFQOPwRS7bWYMUPn75DVV" target="_blank">PlayList</a>
             <!-- <li><a href="#"></a></li> -->
         </ul>
