--- a/index.html
+++ b/index.html
@@ -275,11 +275,12 @@
     </section>
 
     <section id="contact">
-        <h2 id="h2-contact">Contacto</h2>
+        <h2 id="h2-contact">CONTACTO</h2>
+        <iframe class="ggmaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.8072174434255!2d-58.40431342329043!3d-34.76044880587897!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd313e7752bff%3A0x173c46723e606f6f!2sADISE%20RECORDS!5e0!3m2!1ses-419!2sar!4v1694039258574!5m2!1ses-419!2sar" width="600" height="450"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div id="h4-container">
             <h4>Gmail: Milton.html.index@gmail.com</h4>
             <h4>Telefono: +54 11-3417-3720</h4>
-            <h4>Intagram: @UniverseMarte</h4>
+            <h4>Intagram: @universemarte</h4>
             <h4>TikTok: @MarteUniverse</h4>
         </div>
         <div>
