--- a/index.html
+++ b/index.html
@@ -160,27 +160,35 @@
                 <h3 id="h3-pa"></h3>
                 <img src="camera-g4f8217dc6_640.jpg">
                 <p id="p-pa">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos voluptatum animi, ipsa excepturi
-                    pariatur culpa illo amet architecto dolore saepe unde ipsam est autem aliquid! Perspiciatis in ipsum
-                    voluptates cum.
+                    La producción audiovisual es una forma de comunicación que utiliza elementos visuales y auditivos
+                    para transmitir mensajes, contar historias o crear experiencias visuales y sonoras. Este proceso
+                    involucra una serie de etapas, desde la conceptualización de la idea hasta la distribución del
+                    producto final. En la era digital actual, la producción audiovisual ha experimentado una revolución
+                    tecnológica que ha democratizado su acceso y ha permitido a una amplia gama de creadores y empresas
+                    participar en este campo.
                 </p>
             </div>
             <div id="div-pa-2">
                 <h3 id="h3-pa-2"></h3>
                 <img src="camera_todavia.jpg">
                 <p id="p-pa-2">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos voluptatum animi, ipsa excepturi
-                    pariatur culpa illo amet architecto dolore saepe unde ipsam est autem aliquid! Perspiciatis in ipsum
-                    voluptates cum.
+                    Una de las etapas fundamentales en la producción audiovisual es la preproducción, donde se
+                    planifican todos los detalles necesarios para llevar a cabo el proyecto. Esto incluye la elaboración
+                    de guiones, la selección de locaciones, la contratación de talento humano y la adquisición de
+                    equipos técnicos. La preproducción es crucial para garantizar que el proyecto se desarrolle de
+                    manera eficiente y se alcancen los objetivos deseados.
                 </p>
             </div>
             <div id="div-pa-3">
                 <h3 id="h3-pa-3"></h3>
                 <img src="cammara_concierto.jpg">
                 <p id="p-pa-3">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos voluptatum animi, ipsa excepturi
-                    pariatur culpa illo amet architecto dolore saepe unde ipsam est autem aliquid! Perspiciatis in ipsum
-                    voluptates cum.
+                    En resumen, la producción audiovisual es un proceso complejo que combina elementos visuales y
+                    auditivos para comunicar mensajes y contar historias. Desde la preproducción hasta la
+                    postproducción, cada etapa desempeña un papel importante en la creación de contenido de alta
+                    calidad. La evolución tecnológica ha abierto nuevas oportunidades para participar en la producción
+                    audiovisual, lo que ha llevado a un aumento en la diversidad y la accesibilidad de este medio de
+                    comunicación.
                 </p>
             </div>
         </div>
@@ -276,9 +284,12 @@
 
     <section id="contact">
         <h2 id="h2-contact">CONTACTO</h2>
-        <iframe class="ggmaps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.8072174434255!2d-58.40431342329043!3d-34.76044880587897!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd313e7752bff%3A0x173c46723e606f6f!2sADISE%20RECORDS!5e0!3m2!1ses-419!2sar!4v1694039258574!5m2!1ses-419!2sar" width="600" height="450"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe class="ggmaps"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.8072174434255!2d-58.40431342329043!3d-34.76044880587897!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd313e7752bff%3A0x173c46723e606f6f!2sADISE%20RECORDS!5e0!3m2!1ses-419!2sar!4v1694039258574!5m2!1ses-419!2sar"
+            width="600" height="450" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div id="h4-container">
-            <h4>Gmail: Milton.html.index@gmail.com</h4>
+            <h4>Gmail: Milton.mojos@gmail.com</h4>
             <h4>Telefono: +54 11-3417-3720</h4>
             <h4>Intagram: @universemarte</h4>
             <h4>TikTok: @MarteUniverse</h4>
